# ducknng

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  NEWS.md  README.Rmd  README.html  README.md  description.yml
.github/workflows/: MainDistributionPipeline.yml
.pi/skills/ducknng-rpc-framework/: SKILL.md
.pi/skills/ducknng-subagent-handoff/: SKILL.md
docs/: api_sealing_checklist.md  codecs.md  design_review.md  design_review_checklist.md  http.md  http_server_framework.md  lifetime.md  manifest.md  mesh_routing_demo.md  protocol.md  registry.md  security.md  subagents.md  transports.md  types.md
duckdb_capi/: README.md
function_catalog/: functions.md  functions.tsv  functions.yaml  generate_function_catalog.py
patches/nng/: 0001-windows-rtools42-timespec-fallback.patch  README.md
src/: add_numbers.c  capi_quack.c  ducknng_duckdb_streaming_compat.c  ducknng_extension.c  ducknng_http_compat.c  ducknng_ipc_in.c  ducknng_ipc_out.c  ducknng_methods.c  ducknng_nng_compat.c  ducknng_registry.c  ducknng_runtime.c  ducknng_service.c  ducknng_session.c  ducknng_sql_aio.c  ducknng_sql_api.c  ducknng_sql_auth.c  ducknng_sql_body.c  ducknng_sql_monitor.c  ducknng_sql_registry.c  ducknng_sql_rpc.c  ducknng_sql_service.c  ducknng_sql_session.c  ducknng_sql_socket.c  ducknng_sql_tls.c  ducknng_transport.c  ducknng_util.c  ducknng_wire.c
src/include/: ducknng_duckdb_streaming_compat.h  ducknng_http_compat.h  ducknng_ipc_in.h  ducknng_ipc_out.h  ducknng_manifest.h  ducknng_nng_compat.h  ducknng_registry.h  ducknng_runtime.h  ducknng_service.h  ducknng_session.h  ducknng_sql_api.h  ducknng_sql_shared.h  ducknng_thread.h  ducknng_transport.h  ducknng_util.h  ducknng_wire.h
test/: http_smoke.py  rpc_smoke.R
test/certs/: loopback-cert-key.pem  loopback-cert.pem  loopback-key.pem
test/certs/mtls/: ca.pem  client-a-cert-key.pem  client-b-cert-key.pem  server-cert-key.pem
test/sql/: capi_quack.test  ducknng_body_codecs.test  ducknng_http_client_contract.test  ducknng_http_server_routing.test  ducknng_ip_allowlist.test  ducknng_lifecycle_races.test  ducknng_mtls_auth.test  ducknng_negative_paths.test  ducknng_peer_allowlist.test  ducknng_pipe_monitor.test  ducknng_rpc_client_smoke.test  ducknng_server_start.test  ducknng_service_limits.test  ducknng_socket_protocols.test  ducknng_sql_authorizer.test  ducknng_ws_transports.test
